tests/positive/ConstructorWildcard.juvix
module ConstructorWildcard;

type Bool :=
 false | true;

type either (A B : Type) :=
  left A
  | right B;

isLeft {A B} : either A B → Bool
 | left@{} := true
 | right@{} := false;

not : Bool → Bool
 | false@{} := true
 | true := false;
