tests/negative/Iterators3.juvix
module Iterators3;

map : {A B : Type} → (A → B) → A → B
| f x := f x;

builtin bool
type Bool :=
  | true : Bool
  | false : Bool;

main : Bool := map (x in true) x;
